Filter phieu theo chi nhanh, nhan vien

--- a/TnHSell/2.BL/BL.csproj
+++ b/TnHSell/2.BL/BL.csproj
@@ -382,6 +382,7 @@
     </Compile>
     <Compile Include="Model\CodeModel.cs" />
     <Compile Include="Model\AuthModel.cs" />
+    <Compile Include="Model\InvoiceFilterModel.cs" />
     <Compile Include="Model\StoreModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Session.cs" />
